--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^2.7.4",
     "express": "^4.18.1",
     "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "nodemailer": "^6.7.7",
+    "validator": "^13.7.0"
   }
 }
